--- a/HuaShanApp/app/src/main/res/layout/layout_records_item.xml
+++ b/HuaShanApp/app/src/main/res/layout/layout_records_item.xml
@@ -33,7 +33,7 @@
             android:src="@drawable/sum_icon"/>
 
         <TextView
-            android:id="@+id/sum"
+            android:id="@+id/amount"
             app:layout_widthPercent="25%"
             android:layout_height="wrap_content"
             app:layout_marginLeftPercent="64%"
