--- a/HuaShanApp/app/src/main/res/layout/activity_myreturndetails.xml
+++ b/HuaShanApp/app/src/main/res/layout/activity_myreturndetails.xml
@@ -4,11 +4,11 @@
     <data>
         <variable
             name="entity"
-            type="com.karazam.huashanapp.my.transactiondetails.withdrawals.model.databinding.WithdrawalsdetailsEntity"
+            type="com.karazam.huashanapp.my.transactiondetails.myreturn.mode.databinding.MyreturndetailsEntity"
             ></variable>
         <variable
             name="handler"
-            type="com.karazam.huashanapp.my.transactiondetails.withdrawals.viewmodel.WithdrawalsdetailsViewModel"
+            type="com.karazam.huashanapp.my.transactiondetails.myreturn.viewmodel.MyreturndetailsViewModel"
             ></variable>
     </data>
     <android.support.percent.PercentRelativeLayout
@@ -52,7 +52,7 @@
                 android:layout_weight="1"
                 android:gravity="center_vertical"
                 android:paddingLeft="20dp"
-                android:text="提现详情"
+                android:text="回款详情"
                 android:textColor="#272636"
                 android:textSize="@dimen/title_text_size"/>
 
@@ -88,7 +88,6 @@
 
 
                 <android.support.percent.PercentFrameLayout
-                    android:id="@+id/content_pl"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
@@ -96,7 +95,7 @@
 
                     <android.support.percent.PercentFrameLayout
                         android:layout_width="match_parent"
-                        app:layout_heightPercent="75%"
+                        app:layout_heightPercent="55%"
                         android:background="#fff"
                         app:layout_marginTopPercent="0.5%">
 
@@ -104,26 +103,36 @@
                             android:layout_width="match_parent"
                             app:layout_heightPercent="10%"
                             app:layout_marginTopPercent="2%"
-                            android:gravity="center">
-
-                            <ImageView
-                                android:id="@+id/bank_logo"
-                                app:layout_widthPercent="8%"
-                                android:layout_height="match_parent"
-                                android:src="@drawable/bankdef_logo"/>
+                            android:gravity="center"
+                            android:visibility="gone">
 
                             <TextView
                                 android:id="@+id/bank_name"
                                 android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
+                                android:layout_toRightOf="@+id/bank_logo"
                                 app:layout_marginLeftPercent="2%"
                                 android:gravity="center"
-                                android:text="中国银行"
+                                android:text="中国银行"/>
+
+                            <ImageView
+                                android:id="@+id/bank_logo"
+                                app:layout_widthPercent="8%"
+                                android:layout_height="match_parent"
+                                android:src="@drawable/zgyh_icon"
                                 android:layout_alignParentTop="true"
-                                android:layout_toRightOf="@+id/bank_logo"
-                                android:layout_toEndOf="@+id/bank_logo" />
+                                android:layout_alignParentLeft="true"
+                                android:layout_alignParentStart="true" />
 
                         </android.support.percent.PercentRelativeLayout>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            app:layout_heightPercent="10%"
+                            android:layout_gravity="center_horizontal"
+                            android:gravity="center"
+                            app:layout_marginTopPercent="18%"
+                            android:text="产融贷CR216001-41"/>
 
                         <TextView
                             android:id="@+id/withdrawals_money"
@@ -131,8 +140,9 @@
                             app:layout_heightPercent="10%"
                             android:layout_gravity="center_horizontal"
                             android:gravity="center"
-                            app:layout_marginTopPercent="15%"
-                            android:text="-0.40"
+                            app:layout_marginTopPercent="30%"
+                            android:text="+3,000.00"
+                            android:textColor="#f00"
                             android:textSize="@dimen/transactiondetails_content_text_size"/>
 
                         <TextView
@@ -140,115 +150,96 @@
                             android:layout_width="wrap_content"
                             app:layout_heightPercent="10%"
                             android:layout_gravity="center_horizontal"
-                            app:layout_marginTopPercent="25%"
+                            app:layout_marginTopPercent="45%"
                             android:gravity="center"
-                            android:text="交易完成"
+                            android:text="已收回款"
                             android:textSize="@dimen/transactiondetails_statet_text_size"/>
 
                         <TextView
                             android:layout_width="wrap_content"
                             app:layout_heightPercent="8%"
-                            app:layout_marginTopPercent="37%"
+                            app:layout_marginTopPercent="60%"
                             android:gravity="center"
                             app:layout_marginLeftPercent="5%"
-                            android:text="服务费"
-                            android:textSize="@dimen/transactiondetails_service_text_size"/>
-
-                        <TextView
-                            android:id="@+id/tv_fee"
-                            android:layout_width="wrap_content"
-                            app:layout_heightPercent="8%"
-                            app:layout_marginTopPercent="37%"
-                            android:layout_gravity="right"
-                            app:layout_marginRightPercent="5%"
-                            android:gravity="center"
-                            android:text="0.10"
+                            android:text="期数"
                             android:textSize="@dimen/transactiondetails_service_text_size"/>
 
                         <!--分割线-->
                         <ImageView
                             app:layout_widthPercent="90%"
                             android:layout_height="1dp"
-                            android:layout_gravity="center_horizontal"
-                            app:layout_marginTopPercent="45%"
+                            android:layout_gravity="center_horizontal|bottom"
+                            app:layout_marginBottomPercent="5%"
                             android:background="@color/line_color"/>
 
                         <TextView
                             android:layout_width="wrap_content"
                             app:layout_heightPercent="8%"
-                            app:layout_marginTopPercent="46%"
+                            app:layout_marginTopPercent="72%"
                             app:layout_marginLeftPercent="5%"
                             android:gravity="center"
-                            android:text="提现说明"
+                            android:text="回款说明"
                             android:textSize="@dimen/transactiondetails_text_size"/>
 
                         <TextView
-                            android:id="@+id/tv_memo"
                             android:layout_width="wrap_content"
                             app:layout_heightPercent="8%"
-                            app:layout_marginTopPercent="46%"
+                            app:layout_marginTopPercent="72%"
                             app:layout_marginRightPercent="5%"
                             android:layout_gravity="right"
                             android:gravity="center"
-                            android:text="审核成功，次日到账"
+                            android:text="批量代付-账户余额"
                             android:textSize="@dimen/transactiondetails_text_size"/>
 
+
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            app:layout_marginTopPercent="56%"
                             app:layout_marginLeftPercent="5%"
+                            app:layout_marginTopPercent="84%"
+
+                            android:gravity="center"
                             android:textSize="@dimen/transactiondetails_text_size"
-                            android:text="处理进度"/>
+                            android:text="回收时间"/>
 
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            app:layout_marginRightPercent="5%"
+                            app:layout_marginTopPercent="84%"
+                            android:gravity="center"
+                            android:layout_gravity="right"
+                            android:textSize="@dimen/transactiondetails_text_size"
+                            android:text="2016-11-13 14:13"/>
 
-                        <android.support.percent.PercentFrameLayout
-                            app:layout_widthPercent="55%"
-                            app:layout_heightPercent="35%"
-                            app:layout_marginTopPercent="56%"
+                        <TextView
+                            android:layout_width="wrap_content"
+                            app:layout_heightPercent="8%"
+                            app:layout_marginTopPercent="60%"
                             android:layout_gravity="right"
                             app:layout_marginRightPercent="5%"
-                            >
-
-                            <android.support.v7.widget.RecyclerView
-                                android:id="@+id/rl_state"
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:overScrollMode="never"
-                                android:scrollbars="none"
-                                >
-
-                            </android.support.v7.widget.RecyclerView>
-
-                        </android.support.percent.PercentFrameLayout>
-
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            app:layout_marginLeftPercent="5%"
-                            app:layout_marginBottomPercent="2%"
-                            android:layout_gravity="bottom"
-                            android:textSize="@dimen/transactiondetails_text_size"
-                            android:text="提现到"/>
-
-                        <TextView
-                            android:id="@+id/tv_card"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            app:layout_marginRightPercent="5%"
-                            app:layout_marginBottomPercent="2%"
-                            android:layout_gravity="bottom|right"
-                            android:textSize="@dimen/transactiondetails_text_size"
-                            android:text="中国银行（7634）王蕙"/>
+                            android:gravity="center"
+                            android:text="第二期/共三期"
+                            android:textSize="@dimen/transactiondetails_service_text_size"
+                            android:id="@+id/textView5" />
 
                     </android.support.percent.PercentFrameLayout>
 
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_marginTopPercent="58%"
+                        android:layout_gravity="center_horizontal"
+                        android:text="对此订单有疑问"
+                        android:textColor="#0894EC"
+                        android:textSize="13dp"/>
+
 
                 </android.support.percent.PercentFrameLayout>
+
             </android.support.v4.widget.SwipeRefreshLayout>
-
-
         </android.support.percent.PercentFrameLayout>
     </android.support.percent.PercentRelativeLayout>
 </layout>
+
+
