--- a/HuaShanApp/app/src/main/res/layout/activity_recharge.xml
+++ b/HuaShanApp/app/src/main/res/layout/activity_recharge.xml
@@ -115,7 +115,7 @@
                     app:layout_heightPercent="55%"
                     android:layout_gravity="center_vertical"
                     app:layout_marginLeftPercent="5%"
-                    android:src="@drawable/zgyh_icon"/>
+                    android:src="@drawable/bankdef_logo"/>
 
                 <TextView
                     android:layout_width="wrap_content"
