--- a/HuaShanApp/app/src/main/res/layout/activity_rechargedetails.xml
+++ b/HuaShanApp/app/src/main/res/layout/activity_rechargedetails.xml
@@ -73,6 +73,7 @@
         </LinearLayout>
 
         <android.support.percent.PercentFrameLayout
+
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/title_ll"
@@ -88,6 +89,7 @@
 
 
                     <android.support.percent.PercentFrameLayout
+                        android:id="@+id/content_pl"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
 
@@ -174,6 +176,7 @@
                                 android:textSize="@dimen/transactiondetails_text_size"/>
 
                             <TextView
+                                android:id="@+id/tv_memo"
                                 android:layout_width="wrap_content"
                                 app:layout_heightPercent="8%"
                                 app:layout_marginTopPercent="72%"
@@ -195,6 +198,7 @@
                                 android:text="创建时间"/>
 
                             <TextView
+                                android:id="@+id/tv_data"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 app:layout_marginRightPercent="5%"
