--- a/HuaShanApp/app/src/main/res/layout/activity_withdrawals.xml
+++ b/HuaShanApp/app/src/main/res/layout/activity_withdrawals.xml
@@ -115,7 +115,7 @@
                     app:layout_heightPercent="55%"
                     android:layout_gravity="center_vertical"
                     app:layout_marginLeftPercent="5%"
-                    android:src="@drawable/zgyh_icon"/>
+                    android:src="@drawable/bankdef_logo"/>
 
 
             </android.support.percent.PercentFrameLayout>
@@ -224,7 +224,10 @@
             android:layout_height="match_parent"
             android:clickable="true"
             android:background="#60000000"
-            android:visibility="gone">
+            android:visibility="gone"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true">
 
         </com.example.paymentpassword.PasswordView>
     </android.support.percent.PercentRelativeLayout>
