--- a/HuaShanApp/app/src/main/res/layout/activity_messagedetails.xml
+++ b/HuaShanApp/app/src/main/res/layout/activity_messagedetails.xml
@@ -91,6 +91,7 @@
                     android:id="@+id/rl_messagedetails"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:overScrollMode="never"
                     >
 
                 </com.example.utils.custom.RefreshRecyclerView>
