--- a/HuaShanApp/app/src/main/res/layout/activity_myreturndetails.xml
+++ b/HuaShanApp/app/src/main/res/layout/activity_myreturndetails.xml
@@ -81,6 +81,7 @@
 
             >
 
+
             <android.support.v4.widget.SwipeRefreshLayout
                 android:id="@+id/swipe_l"
                 android:layout_width="match_parent"
@@ -88,6 +89,7 @@
 
 
                 <android.support.percent.PercentFrameLayout
+                    android:id="@+id/content_pl"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
@@ -127,6 +129,7 @@
                         </android.support.percent.PercentRelativeLayout>
 
                         <TextView
+                            android:id="@+id/tv_title"
                             android:layout_width="wrap_content"
                             app:layout_heightPercent="10%"
                             android:layout_gravity="center_horizontal"
@@ -135,7 +138,7 @@
                             android:text="产融贷CR216001-41"/>
 
                         <TextView
-                            android:id="@+id/withdrawals_money"
+                            android:id="@+id/tv_amount"
                             android:layout_width="wrap_content"
                             app:layout_heightPercent="10%"
                             android:layout_gravity="center_horizontal"
@@ -146,7 +149,7 @@
                             android:textSize="@dimen/transactiondetails_content_text_size"/>
 
                         <TextView
-                            android:id="@+id/withdrawals_state"
+                            android:id="@+id/tv_state"
                             android:layout_width="wrap_content"
                             app:layout_heightPercent="10%"
                             android:layout_gravity="center_horizontal"
@@ -182,6 +185,7 @@
                             android:textSize="@dimen/transactiondetails_text_size"/>
 
                         <TextView
+                            android:id="@+id/tv_memo"
                             android:layout_width="wrap_content"
                             app:layout_heightPercent="8%"
                             app:layout_marginTopPercent="72%"
@@ -203,6 +207,7 @@
                             android:text="回收时间"/>
 
                         <TextView
+                            android:id="@+id/tv_createDate"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             app:layout_marginRightPercent="5%"
@@ -213,6 +218,7 @@
                             android:text="2016-11-13 14:13"/>
 
                         <TextView
+                            android:id="@+id/tv_period"
                             android:layout_width="wrap_content"
                             app:layout_heightPercent="8%"
                             app:layout_marginTopPercent="60%"
@@ -221,7 +227,7 @@
                             android:gravity="center"
                             android:text="第二期/共三期"
                             android:textSize="@dimen/transactiondetails_service_text_size"
-                            android:id="@+id/textView5" />
+                            />
 
                     </android.support.percent.PercentFrameLayout>
 
