--- a/HuaShanApp/app/src/main/res/layout/fragment_my.xml
+++ b/HuaShanApp/app/src/main/res/layout/fragment_my.xml
@@ -57,6 +57,15 @@
 
             </android.support.percent.PercentFrameLayout>
 
+        <com.example.utils.custom.VpSwipeRefreshLayout
+            android:id="@+id/swl_pl"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_heightPercent="92%"
+            android:layout_gravity="bottom">
+
+
+
         <android.support.percent.PercentFrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -395,9 +404,9 @@
             </android.support.v4.widget.NestedScrollView>
 
 
-        </android.support.percent.PercentFrameLayout>
+            </android.support.percent.PercentFrameLayout>
 
-
+        </com.example.utils.custom.VpSwipeRefreshLayout>
 
 
     </android.support.percent.PercentFrameLayout>
